Bug 331487 - Angled Brushes are not swapped for mirror view
Summary: Angled Brushes are not swapped for mirror view
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Brush engines (other bugs)
Version First Reported In: 2.8 Beta
Platform: Microsoft Windows Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-02-25 11:16 UTC by Chris Cotish
Modified: 2014-02-26 12:24 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Chris Cotish 2014-02-25 11:16:37 UTC
Basically the same as with resize icons for mirror view which I reported earlier. Brush is 'flipped' when using mirror view. I don't think it's a desirable result.

Noticed on - Layout_oval.



Reproducible: Always

Steps to Reproduce:
1. Select Layout_oval brush
2. Enable Mirror View
Actual Results:  
Brush is flipped.

Expected Results:  
Brush should stay the same.
Comment 1 Dmitry Kazakov 2014-02-26 05:59:27 UTC
I can see the outline is flipped until the first stroke, but then (after the first stroke), it goes ok. The stroke is done correctly. The problem is only in outline before the first stroke.
Comment 2 Chris Cotish 2014-02-26 06:25:57 UTC
Correct, same happens after you go back to normal view when the outline flips in mirror mode.
Comment 3 Dmitry Kazakov 2014-02-26 12:24:02 UTC
Git commit 01d300c66133b4650ffcbf0eed135f6583defd62 by Dmitry Kazakov.
Committed on 26/02/2014 at 12:23.
Pushed by dkazakov into branch 'master'.

Fix the outline when the mirroring of the canvas has changed

The settings of the preset related to the canvas mirroring
and rotation should be changed not with the first click, but
dynamically on 1) preset change and 2) transformation change.
Related: bug 326508

The patch removes the fix for the following bug, although it is not
reproducible anymore.

M  +1    -0    krita/ui/CMakeLists.txt
M  +10   -1    krita/ui/canvas/kis_canvas_controller.cpp
A  +59   -0    krita/ui/canvas/kis_paintop_transformation_connector.cpp     [License: GPL (v2+)]
A  +43   -0    krita/ui/canvas/kis_paintop_transformation_connector.h     [License: GPL (v2+)]
M  +0    -2    krita/ui/kis_paintop_box.cc
M  +0    -4    krita/ui/tool/kis_tool_freehand.cc

http://commits.kde.org/calligra/01d300c66133b4650ffcbf0eed135f6583defd62