Fix the outline when the mirroring of the canvas has changed

The settings of the preset related to the canvas mirroring
and rotation should be changed not with the first click, but
dynamically on 1) preset change and 2) transformation change.

BUG:331487

The patch removes the fix for the following bug, although it is not
reproducible anymore.
CCBUG:326508