krita/ui/canvas/kis_canvas_controller.cpp
@@ -23,6 +23,7 @@
 
 #include <klocale.h>
 
+#include "kis_paintop_transformation_connector.h"
 #include "kis_coordinates_converter.h"
 #include "kis_canvas2.h"
 #include "kis_image.h"
@@ -32,13 +33,15 @@
 
 struct KisCanvasController::Private {
     Private(KisCanvasController *qq)
-        : q(qq)
+        : q(qq),
+          paintOpTransformationConnector(0)
     {
     }
 
     KisView2 *view;
     KisCoordinatesConverter *coordinatesConverter;
     KisCanvasController *q;
+    KisPaintopTransformationConnector *paintOpTransformationConnector;
 
     KisInputManager *globalEventFilter;
 
@@ -104,6 +107,9 @@ void KisCanvasController::setCanvas(KoCanvasBase *canvas)
     m_d->coordinatesConverter =
         const_cast<KisCoordinatesConverter*>(kritaCanvas->coordinatesConverter());
     KoCanvasControllerWidget::setCanvas(canvas);
+
+    m_d->paintOpTransformationConnector =
+        new KisPaintopTransformationConnector(m_d->view, this);
 }
 
 void KisCanvasController::changeCanvasWidget(QWidget *widget)
@@ -149,6 +155,7 @@ void KisCanvasController::mirrorCanvas(bool enable)
     QPoint newOffset = m_d->coordinatesConverter->mirror(m_d->coordinatesConverter->widgetCenterPoint(), enable, false);
     m_d->updateDocumentSizeAfterTransform();
     setScrollBarValue(newOffset);
+    m_d->paintOpTransformationConnector->notifyTransformationChanged();
 }
 
 void KisCanvasController::rotateCanvas(qreal angle)
@@ -156,6 +163,7 @@ void KisCanvasController::rotateCanvas(qreal angle)
     QPoint newOffset = m_d->coordinatesConverter->rotate(m_d->coordinatesConverter->widgetCenterPoint(), angle);
     m_d->updateDocumentSizeAfterTransform();
     setScrollBarValue(newOffset);
+    m_d->paintOpTransformationConnector->notifyTransformationChanged();
 }
 
 void KisCanvasController::rotateCanvasRight15()
@@ -173,6 +181,7 @@ void KisCanvasController::resetCanvasTransformations()
     QPoint newOffset = m_d->coordinatesConverter->resetRotation(m_d->coordinatesConverter->widgetCenterPoint());
     m_d->updateDocumentSizeAfterTransform();
     setScrollBarValue(newOffset);
+    m_d->paintOpTransformationConnector->notifyTransformationChanged();
 }
 
 void KisCanvasController::slotToggleWrapAroundMode(bool value)
